plugins {
    id 'org.springframework.boot' version "$springBoot"
    id 'application'
}

java {
    sourceCompatibility = 21
    targetCompatibility = 21
}

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':lib:ac-api')
    implementation "net.sf.applecommander:ShrinkItArchive:$shkVersion"
    implementation "net.sf.applecommander:applesingle-api:$asVersion"
    implementation "net.sf.applecommander:bastools-api:$btVersion"

    compileOnly "org.apache.ant:ant:$antVersion"

    testImplementation platform("org.junit:junit-bom:$junitVersion")
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

application {
    mainClass = 'com.webcodepro.applecommander.ui.ac'
}

bootJar {
    archiveBaseName = 'AppleCommander'
    archiveAppendix = 'ac'
    manifest {
        attributes 'Implementation-Title': "AppleCommander 'ac'",
                   'Implementation-Version': archiveVersion
    }
    from('../../LICENSE')
}
